@@ -1,3 +1,5 @@
+- added test functionality to editor (2022/12/24 MS)
+
 1.1:
 - added editor (2022/11/05 MS)
 - added swedish translation (2022/07/22 Sanchez)
